--- a/01_week_01/main.tex
+++ b/01_week_01/main.tex
@@ -34,6 +34,45 @@
 \chapter*{Significant Figures}
 \input{significant-figures}
 
+\chapter*{Warming-up Circuits}
+
+\begin{question}
+
+Referring to Figure \ref{fig:wheatstone}, prove the following equation
+
+\begin{equation} \label{eq:1}
+ {\rm E_0 = E_i \left[ \frac{R_1}{R_1+R_2} - \frac{R_3}{R_3+R_4} \right]}
+\end{equation}
+
+Also, derive the balanced equation 
+\begin{equation} \label{eq:2}
+ {\rm \frac{R_1}{R_2} = \frac{R_3}{R_4} }
+\end{equation}
+
+\begin{figure}[t!]
+\centering
+\includegraphics[scale=0.6]{wheatstone}
+\caption{A wheatstone bridge.}\label{fig:wheatstone}
+\end{figure}
+\examspace{8em}
+
+\end{question}
+\begin{solution}
+
+\end{solution}
+
+
+\begin{question}
+
+Referring to Figure \ref{fig:wheatstone}, if ${\rm R_1 = 1 \Omega}$, ${\rm R_2 = 3 \Omega}$, and ${\rm R_3 = 2 \Omega}$,
+determine (a) the value of ${\rm R_4}$ such that the Wheatstone bridge is balanced, and (b) the bridge’s output voltage under this condition.
+
+\end{question}
+\begin{solution}
+
+Equation \ref{eq:2} specifies the relationship between resistances when the bridge is balanced. Thus, $R_4 = \frac{R_2 R_3}{R_1} = 3 \times 2 / 1 = 6 \Omega$. Because the bridge is balanced, its output voltage is zero. This can be verified by substituting the four resistance values into Equation \ref{eq:1}.
+
+\end{solution}
 
 \end{document}
 
