--- a/01_week_01/main.tex
+++ b/01_week_01/main.tex
@@ -18,7 +18,7 @@
 
 
 \begin{document}
-\author{Asem Alaa}
+\author{Dr. Muhammed Rushdi \and Asem Alaa}
 
 \title{Measurements and Instrumentation [SBE206A] (Fall 2018)\\ Tutorial 1}
 
