--- a/partials/includes.tex
+++ b/partials/includes.tex
@@ -22,6 +22,11 @@
 \usepackage{filecontents}
 \usepackage{multirow}
 %\usepackage{showframe}% to show frames
+%\ifCLASSOPTIONcompsoc
+\usepackage[caption=false, font=normalsize, labelfont=sf, textfont=sf]{subfig}
+%\else
+%\usepackage[caption=false, font=footnotesize]{subfig}
+%\fi    
 
 \usetikzlibrary{patterns,arrows,arrows.meta,calc,intersections,shapes,positioning,decorations.pathreplacing,decorations.markings,decorations.pathmorphing}
 \usepackage{multicol}
