--- a/01_week_01/cheat-sheet.tex
+++ b/01_week_01/cheat-sheet.tex
@@ -129,7 +129,7 @@
     ${\rm yocto (y) = 10^{-24}  }$ \\
     \end{minipage}
 };
-\node[fancytitle, right=10pt] at (box.north west) {Temperature};
+\node[fancytitle, right=10pt] at (box.north west) {Scales};
 \end{tikzpicture}
 
 \end{multicols*}
