--- a/03_week_03/main.tex
+++ b/03_week_03/main.tex
@@ -101,13 +101,16 @@ If all the coefficients $a_2 \cdots a_n$ except for $a_0$ and $a_1$ in Equation 
 a_1 \frac{dq_o}{dt} + a_0 q_o = b_0 q_i  
 \end{equation}
 
-Taking the Laplace transform of \ref{eqn:first-order} as a method to solving the differential equation:
+Taking the Laplace transform of Equation \ref{eqn:first-order} as a method to solving the differential equation:
 
 \begin{align}
-( a_1 s + a_0 ) Q_o(s) &= b_0 Q_i(s)  \\
-Q_o(s) &= \frac{ b_0 Q_i(s) }{ a_1 s + a_0 } \\
-Q_o(s) &= \frac{ K Q_i(s) }{ s + \frac{1}{\uptau}} \label{eqn:first-order-laplace}
+a_1 \left[ s Q_o(s) - q_o(0) \right] + a_0 Q_o(s) &= b_0 Q_i(s) \\ 
+( a_1 s + a_0 ) Q_o(s) &= b_0 Q_i(s) + a_1 q_o(0) \\
+Q_o(s) &= \frac{ b_0 Q_i(s) + a_1 q_o(0) }{ a_1 s + a_0 } \\
+Q_o(s) &= \frac{ K Q_i(s) + \uptau q_o(0) }{ \uptau s + 1} \label{eqn:first-order-laplace}
 \end{align}
+
+Where $K = b_0/a_0$ as the static sensitivity and $\uptau = a_1/a_0$ as the time constant of the system.
 
 \begin{figure*}[h!]\label{fig:first-order}
 \centering
@@ -117,15 +120,121 @@ Q_o(s) &= \frac{ K Q_i(s) }{ s + \frac{1}{\uptau}} \label{eqn:first-order-laplac
 
 \subsection*{Second-order instrument}
 
+If all the coefficients $a_3 \cdots a_n$ except for $a_0$, $a_1$ and $a_2$ in Equation \ref{eqn:dynamic-reduced} are assumed zero, then: 
 
-\begin{question}
+\begin{equation}\label{eqn:second-order}
+a_2 \frac{d^2q_o}{dt^2} + a_1 \frac{dq_o}{dt} + a_0 q_o = b_0 q_i  
+\end{equation}
+
+Taking the Laplace transform of Equation \ref{eqn:second-order} as a method to solving the differential equation:
+
+\begin{equation}
+a_2 \left[ s^2 Q_o(s) - s q_o(0) - q_o'(0) \right] + a_1 \left[ sQ_o(s) - q_o(0) \right] + a_0Q_o(s) = b_0 Q_i(s) 
+\end{equation}
+
+\begin{align} 
+(a_2 s^2 + a_1 s + a_0 ) Q_o(s) &= b_0 Q_i(s) + a_2sq_o(0) + a_2 q_o'(0) + a_1 q_o(0) \\
+Q_o(s) &= \frac{ b_0 Q_i(s) + a_2sq_o(0) + a_2 q_o'(0) + a_1 q_o(0) }{ a_2 s^2 + a_1 s + a_0 } \\
+Q_o(s) &= \frac{ K w_n^2 Q_i(s) + q_o(0)s + q_o'(0) + 2 \eta w_n q_o(0) }{ s^2 + 2 \eta w_n s + {w_n}^2} \label{eqn:second-order-laplace}
+\end{align}
+
+Where: \begin{itemize}
+\item $K = b_0/a_0$ as the static sensitivity.
+\item $\omega_n=\sqrt{\frac{a_0}{a_2}}$ as the undamped natural frequency of the system.
+\item $\eta = \frac{a_1 \omega_n}{ 2a_0} = \frac{a_1}{2 \sqrt{a_0a_2}}$ as the \emph{damping ratio} of the system.
+\end{itemize} 
+
+\subsection*{Zero initial condition}
+To develop intuition about the solution of $q_o(t)$, let's assume that the system is driven by an input of constant quantity (i.e $q_i(t)=const.$ \& $Q_i(s)=\frac{const.}{s}$), and $q_o(t)$ has zero initial value. The system is then described by the following equation:
+\begin{equation}\label{eqn:zi-second-order}
+Q_o(s) = \frac{ C }{ s(s^2 + 2 \eta \omega_n s + {\omega_n}^2)}
+\end{equation}
+
+where $C$ is constant.
+
+The solution of $q_o(t)$ is subject to computing the roots of the denumerator part $s(s^2 + 2 \eta w_n s + {w_n}^2)$, where the roots of  $N(s)=(s^2 + 2 \eta w_n s + {w_n}^2)$ is computed as:
+\begin{align}
+s_{1,2} &= \frac{-2\eta \omega_n \pm \sqrt{4\eta^2 \omega_n^2 - 4 \omega_n^2}}{2} \\
+ &= -\eta \omega_n \pm \omega_n \sqrt{\eta^2 - 1}
+\end{align}
+
+which has three cases:
+\begin{enumerate}
+\item $\eta > 1$: $N(s)$ has real distinct roots, then our system is called highly damped.
+\item $\eta = 1$: $N(s)$ has real identical roots, then our system is called critically damped.
+\item $\eta < 1$: $N(s)$ has complex roots, then our system is called lightly damped.
+\end{enumerate}
+
+\begin{figure*}[h!]\label{fig:second-order}
+\centering
+  \includegraphics[width=0.7\linewidth]{second-order}
+  \caption{Second-order instrument characteristic. } 
+\end{figure*}
+
+Figure \ref{fig:second-order} shows a system of second-order reponse with different $\eta$ values.
+
+\subsection*{Case 1: highly damped system ($\eta > 1$)}
+
+The Equation \ref{eqn:zi-second-order} can be factorized as following:
+\begin{align*}
+Q_o(s)|_{\eta>1} &= \frac{const.}{s(s + (\alpha + \beta))(s + (\alpha - \beta)} \\
+&= \frac{A}{s} + \frac{B}{s + (\alpha + \beta)} + \frac{C}{s + (\alpha - \beta)}
+\end{align*}
+
+where $\beta = w_n\sqrt{\eta^2 - 1}$.
+
+and the general solution of $q_o(t)|_{\eta>1}$ becomes:
+
+\begin{equation}
+q_o(t)|_{\eta>1} = A + Be^{-(\alpha+\beta)t}+Ce^{-(\alpha-\beta)t}
+\end{equation}
+
+\subsection*{Case 2: critically damped system ($\eta = 1$)}
+
+The Equation \ref{eqn:zi-second-order} can be factorized as following:
+\begin{align*}
+Q_o(s)|_{\eta=1} &= \frac{const.}{s(s +\alpha)^2} \\
+&= \frac{A}{s} + \frac{B}{s + \alpha} + \frac{C}{(s + \alpha)^2}
+\end{align*}
+
+
+and the general solution of $q_o(t)|_{\eta=1}$ becomes:
+
+\begin{equation}
+q_o(t)|_{\eta=1} = A + Be^{-\alpha t}+Cte^{-\alpha t}
+\end{equation}
+
+\subsection*{Case 3: lightly damped system ($\eta < 1$)}
+
+The Equation \ref{eqn:zi-second-order} can be expressed as following:
+\begin{align*}
+Q_o(s)|_{\eta<1} &= \frac{A}{s} + \frac{Bs + C}{s^2 + 2 \eta \omega_n s + {\omega_n}^2} \\
+&= \frac{A}{s} + \frac{Bs+C}{(s+\eta \omega_n)^2 + {\omega_n}^2 - \alpha^2} \\
+&= \frac{A}{s} + \frac{Bs+C}{(s+\alpha)^2 + \omega_d^2}
+\end{align*}
+
+where: 
+\begin{itemize}
+\item $\alpha=\eta \omega_n$, is called the attenuation coeffiecent.
+\item $\omega_d= {\omega_n}^2 - \alpha^2 = \omega_n \sqrt{1-\eta^2}$, is called the damped natural frequency, which is responsible of the oscillation frequency of the system response.
+\end{itemize}
+
+and the general solution of $q_o(t)|_{\eta<1}$ becomes:
+
+\begin{equation}
+q_o(t)|_{\eta<1} = A + Be^{- \alpha t}\sin(\omega_d t - \phi)
+\end{equation}
+
+\section*{Problems}
+
+\begin{question}[subtitle=Example on $1_{\rm st}$-order device]
 A balloon is equipped with temperature and altitude measuring instruments and has radio
 equipment that can transmit the output readings of these instruments back to ground. The
 balloon is initially anchored to the ground with the instrument output readings in steady state.
 The altitude-measuring instrument is approximately zero order and the temperature transducer
 first order with a time constant of 15 seconds. The temperature on the ground, $T_0$ , is 10 $^{\circ}$C and the temperature $T_x$  at an altitude of x metres is
 given by the relation: \\
-$T_x = T_0 − 0.01x$
+$T_x = T_0 - 0.01x$
 
 \begin{enumerate}
 \item If the balloon is released at time zero, and thereafter rises upwards at a velocity of 5 metres/second, draw a table showing the temperature and altitude measurements reported
@@ -134,7 +243,7 @@ error in each temperature reading.
 \item  What temperature does the balloon report at an altitude of 5000 metres?
 \end{enumerate}
 
-\examspace*{5em}
+\examspace*{10em}
 
 \end{question}
 \begin{solution}
@@ -142,7 +251,31 @@ error in each temperature reading.
 
 \end{solution}
 
+\begin{question}[subtitle=Example on $1_{\rm st}$-order device]
+An unmanned submarine is equipped with temperature and depth measuring instruments
+and has radio equipment that can transmit the output readings of these instruments back to
+the surface. The submarine is initially floating on the surface of the sea with the instrument
+output readings in steady state. The depthmeasuring instrument is approximately zero order
+and the temperature transducer first order with a time constant of 50 seconds. The water
+temperature on the sea surface, $T_0$ , is 20 $^{\circ}$C and the temperature $T_x$ at a depth of x metres is
+given by the relation:
+$T_x = T_0 - 0.01x$
 
+\begin{enumerate}
+\item If the submarine starts diving at time zero, and thereafter goes down at a velocity of 0.5
+metres/second, draw a table showing the temperature and depth measurements reported at
+intervals of 100 seconds over the first 500 seconds of travel. Show also in the table the error
+in each temperature reading.
+\item  What temperature does the submarine report at a depth of 1000 metres?
+\end{enumerate}
+
+\examspace*{10em}
+
+\end{question}
+\begin{solution}
+
+
+\end{solution}
 
 
 
@@ -159,6 +292,64 @@ and state which of these is the usual target when a second order instrument is b
 \begin{solution}
 
 
+\end{solution}
+
+
+\begin{question}[subtitle=Midterm 2014]
+The dynamic error in a temperature measurement using a thermometer is 70\% at 3 seconds
+after an input step change in temperature. Determine:
+\begin{enumerate}
+\item the magnitude ratio at 3 seconds,
+\item the thermometer’s time constant (in seconds), and
+\item the magnitude ratio at 1 second.
+\end{enumerate}
+\end{question}
+\begin{solution}
+\end{solution}
+
+
+\begin{question}[subtitle=Midterm 2017]
+A thermocouple is immersed in a liquid to monitor its temperature fluctuations. Assume the thermocouple acts as a first-order system.
+\begin{enumerate}
+\item In a planned experiment, the thermocouple is to be exposed to a step change in temperature. The
+response characteristics of the thermocouple must be such that the thermocouple’s output reaches 95\% of the final temperature within 5 seconds. Assume that the thermocouple’s bead (its sensing element) is spherical with  a density ${\rm \rho = 8000 ~Kg/m^3}$, a specific heat at constant volume ${\rm C_v = 380 ~J/(Kg.K)}$ and a convective heat transfer coefficient $h = 210 ~W/(m^2 K)$. The time constant of the thermocouple is related to those parameters by $\uptau = \frac{\rm \rho d C_v}{6h}$, where $d$ is the diameter of the thermocouple's bead. Determine the \emph{maximum} diameter that the
+thermocouple can have and still meet the desired response characteristics.
+\item In another experiment on the same thermocouple, the temperature fluctuations (in ${}^\circ C$) vary in time as $T(t) = 50 + 25\cos(4t)$. The output of the thermocouple transducer system $E(t)$ (in mV) is linearly proportional to temperature and has a static sensitivity of $2~ mV/{}^\circ C$. Find the output $E(t)$ (in mV).
+\end{enumerate}
+
+\examspace*{30em}
+
+\end{question}
+\begin{solution}
+\end{solution}
+
+
+\begin{question}[subtitle=Midterm 2017]
+\begin{figure*}[h!]\label{fig:problem1}
+\centering
+  \includegraphics[width=0.7\linewidth]{problem1}
+  \caption{Second-order response of the system.} 
+\end{figure*}
+An instrument is modeled as a parallel RLC circuit whose differential equation is 
+\begin{equation*}
+\frac{d^2 v(t)}{dt^2} + \frac{1}{RC}\frac{dv(t)}{dt^2} + \frac{1}{LC}v(t) = 0
+\end{equation*}
+
+where $v(t)$ is the capacitor voltage.
+The natural response of the instrument is measured
+and plotted in the Figure \ref{fig:problem1}. Using this chart, determine:
+\begin{enumerate}
+\item the damped natural frequency,
+\item the damping ratio (using the log-decrement method),
+\item the undamped natural frequency,
+\item an expression for $v(t)$, and
+\item the R, L, and C values.
+\end{enumerate}
+
+\examspace*{50em}
+
+\end{question}
+\begin{solution}
 \end{solution}
 
 \end{document}
