--- a/partials/setup.tex
+++ b/partials/setup.tex
@@ -53,7 +53,7 @@ main[r,vc]points[l,vc](\marginparsep,0pt)
 \SetupExSheets{
   headings = fancy,
   question/print = true ,
-  solution/print = true }
+  solution/print = false }
  % counter-format = se.qu ,
 %  counter-within = section ,
   %question/pre-hook = \rule{\textwidth}{1pt},
