--- a/notebooks/1. Introduction.ipynb
+++ b/notebooks/1. Introduction.ipynb
@@ -58,7 +58,7 @@
         "\n",
         "# *Where does statistics fit in Business Anaytics?*\n",
         "\n",
-        "> Many things\n",
+        "> Many things.\n",
         "\n"
       ]
     },
