add gitignore and Midterm solution

--- a/partials/includes.tex
+++ b/partials/includes.tex
@@ -3,6 +3,8 @@
 \usepackage{upgreek}
 \usepackage[english]{babel}
 \usepackage[top=3cm]{geometry}
+\usepackage{color}
+\usepackage{xcolor}
 \usepackage{float}
 \usepackage{tabularx}
 \usepackage{multirow}
