--- a/partials/setup.tex
+++ b/partials/setup.tex
@@ -35,8 +35,9 @@ main[l,vc]subtitle[hc,vc](\marginparsep,0pt)
 \DeclareInstance{exsheets-heading}{block-subtitle}{default}{
 vscale = 2 ,
 pre-code = \rule{\linewidth}{1pt} ,
-post-code = \rule{\linewidth}{1pt} ,%title-format = \large\scshape\color{TitleColor} ,
-number-format = \large\bfseries\color{rgb:red,0.02;green,0.04;blue,0.48} ,
+post-code = \rule{\linewidth}{1pt} ,
+%title-format = \large\scshape\color{Maroon} ,
+number-format = \large\bfseries\color{Blue} ,
 subtitle-format = \large\scshape\color{black} ,
 join = {
 title[r,B]number[l,B](.333em,0pt) ;
@@ -53,7 +54,7 @@ main[r,vc]points[l,vc](\marginparsep,0pt)
 \SetupExSheets{
   headings = fancy,
   question/print = true ,
-  solution/print = false }
+  solution/print = true }
  % counter-format = se.qu ,
 %  counter-within = section ,
   %question/pre-hook = \rule{\textwidth}{1pt},
