--- a/01_week_01/week01.tex
+++ b/01_week_01/week01.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,11pt]{book}
+\documentclass[a4paper,11pt,dvipsnames]{book}
 \renewcommand{\familydefault}{\sfdefault}
 
 \input{../partials/includes}
