--- a/partials/setup.tex
+++ b/partials/setup.tex
@@ -17,6 +17,7 @@ indent-first = true ,
 vscale = 2 ,
 pre-code = \IfInsideQuestionT{\rule{\linewidth}{1pt}} ,
 post-code =\IfInsideQuestionT{\rule{\linewidth}{1pt}} ,
+title-format = \large\scshape\color{Maroon},
 subtitle-format = \large\scshape\color{rgb:red,0.65;green,0.04;blue,0.07} ,
 number-format = \large\bfseries\color{rgb:red,0.02;green,0.04;blue,0.48} ,
 points-format = \itshape ,
@@ -36,7 +37,7 @@ main[l,vc]subtitle[hc,vc](\marginparsep,0pt)
 vscale = 2 ,
 pre-code = \rule{\linewidth}{1pt} ,
 post-code = \rule{\linewidth}{1pt} ,
-%title-format = \large\scshape\color{Maroon} ,
+title-format = \large\scshape\color{Maroon} ,
 number-format = \large\bfseries\color{Blue} ,
 subtitle-format = \large\scshape\color{black} ,
 join = {
