--- a/02_week_02/week02.tex
+++ b/02_week_02/week02.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,11pt]{book}
+\documentclass[a4paper,11pt,dvipsnames]{book}
 \renewcommand{\familydefault}{\sfdefault}
 
 \input{../partials/includes}
