--- a/03_week_03_04_05/week03_04_05.tex
+++ b/03_week_03_04_05/week03_04_05.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,11pt]{book}
+\documentclass[a4paper,11pt,dvipsnames]{book}
 \renewcommand{\familydefault}{\sfdefault}
 
 \input{../partials/includes}
