--- a/07_week07/week07.tex
+++ b/07_week07/week07.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,11pt]{book}
+\documentclass[a4paper,11pt,dvipsnames]{book}
 \renewcommand{\familydefault}{\sfdefault}
 
 \input{../partials/includes}
