--- a/08_week08/week08.tex
+++ b/08_week08/week08.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,11pt]{book}
+\documentclass[a4paper,11pt,dvipsnames]{book}
 \renewcommand{\familydefault}{\sfdefault}
 
 \input{../partials/includes}
