--- a/06_week_06/week06.tex
+++ b/06_week_06/week06.tex
@@ -81,7 +81,7 @@ Y(s) &= \frac{F(s) + y(0) + my'(0)+msy(0)}{ms^2+cs+k} \\
 By equating the denumerator to the characteristic polynomial of the 2\textsuperscript{nd}-order system $N(s)=(s^2 + 2 \eta \omega_n s + {\omega_n}^2)$, we realize that:
 \begin{itemize}
 \item $\omega_n=\sqrt{\frac{k}{m}}$
-\item $\eta = \frac{c}{\sqrt{km}}$
+\item $\eta = \frac{c}{2\sqrt{km}}$
 \end{itemize} 
 
 
